--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,8 +19,19 @@ background-color: #FD6E0A;
 font-size: 18px;
 padding: 10px 18px;
 border-radius: 3px;
-border-color: none;
+border-color: #FD6E0A;
 }
+
+
+
+/* header */
+.header {
+    background-image: url('../assets/developer.png'), url('../assets/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
+
+}
+
 
 /* Nav styles */
 nav {
@@ -49,4 +60,27 @@ nav ul li {
 nav li a {
     text-decoration: none;
     font-size: 25px;
+}
+
+
+/* banner styles */
+.banner {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 35px 0 200px;
+}
+.banner-content {
+    max-width: 580px;
+}
+.banner-greetings {
+    font-size: 45px;
+    font-weight: 600;
+}
+.banner-title {
+    font-size: 80px;
+    font-weight: bold;
+}
+
+.banner-profile-pic {
+    width: 580;
 }
