--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,8 @@ font-size: 18px;
 padding: 10px 18px;
 border-radius: 3px;
 border-color: #FD6E0A;
+border: none;
+margin: 10px 0px;
 }
 
 
@@ -75,10 +77,12 @@ nav li a {
 .banner-greetings {
     font-size: 45px;
     font-weight: 600;
+    margin: 10px 0px;
 }
 .banner-title {
     font-size: 80px;
     font-weight: bold;
+    margin: 10px 0px;
 }
 
 .banner-profile-pic {
