--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,9 @@
   }
   
 /* shared style */
+.secondary-bg {
+    background-color: #fff8f3;
+}
 .text-primary{
     color: #FD6E0A;
 }
@@ -24,7 +27,16 @@ border: none;
 margin: 10px 0px;
 }
 
+.section-title {
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
 
+.section-description {
+    font-size: 18px;
+    color: #242424;
+}
 
 /* header */
 .header {
@@ -87,4 +99,20 @@ nav li a {
 
 .banner-profile-pic {
     width: 580;
+}
+
+
+/* main styles*/
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+
+/* about styles */
+.about {
+    border-radius: 10px;
+    padding: 130px 150px;
+    margin-top: 150px 150px;
+    text-align: center;
 }
