--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,6 +113,11 @@ main {
 .about {
     border-radius: 10px;
     padding: 130px 150px;
-    margin-top: 150px 150px;
+    margin-top: 150px;
     text-align: center;
+}
+
+.about-items {
+    display: flex;
+    justify-content: space-between;
 }
