--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,6 +33,13 @@ margin: 10px 0px;
     color: #181818;
 }
 
+.text-center {
+    text-align: center;
+    
+}
+
+
+
 .section-description {
     font-size: 18px;
     color: #242424;
@@ -107,17 +114,35 @@ main {
     max-width: 1140px;
     margin: 0 auto;
 }
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
 
 
 /* about styles */
 .about {
     border-radius: 10px;
     padding: 130px 150px;
-    margin-top: 150px;
     text-align: center;
 }
 
 .about-items {
     display: flex;
     justify-content: space-between;
+
+}
+
+
+/* skills section styles */
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px #bebebe;
 }
