--- a/styles/styles.css
+++ b/styles/styles.css
@@ -146,3 +146,27 @@ main section{
     border-radius: 5px;
     box-shadow: 0px 6px 50px 0px #bebebe;
 }
+
+
+/* resume section stuyles */
+.resume-container{
+
+    display: flex;
+    gap: 24px;
+
+}
+.experience-description{
+    color: #242424;
+}
+.experience-sub-title{
+    color: #FD6E0A;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.resume hr{
+    margin: 30px 5px;
+}
+.resume-download-cv{
+    margin-top: 50px;
+}
