--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,20 +9,29 @@
 .secondary-bg {
     background-color: #fff8f3;
 }
+
+.hero-section-bg{
+    background-color: #fd6f0a40;
+    background-image: url("/assets/hero-bg.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+}
 .text-primary{
-    color: #FD6E0A;
+    color: #0D1321;
 }
 .drak-2{
-    color: #242424;
+    color: #0D1321;
 
 }
 .btn-primary{
-    color: wheat;
+    color: rgb(255, 255, 255);
 background-color: #FD6E0A;
 font-size: 18px;
 padding: 10px 18px;
 border-radius: 3px;
-border-color: #FD6E0A;
+border-color: #e7e7e7;
 border: none;
 margin: 10px 0px;
 }
@@ -105,7 +114,7 @@ nav li a {
 }
 
 .banner-profile-pic {
-    width: 580;
+    width: 380;
 }
 
 
