--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@
   
 /* shared style */
 .secondary-bg {
-    background-color: #fff8f3;
+    background-color: #fafafa;
 }
 
 .hero-section-bg{
@@ -19,7 +19,7 @@
     height: 100vh;
 }
 .text-primary{
-    color: #0D1321;
+    color: #FD6E0A;
 }
 .drak-2{
     color: #0D1321;
@@ -34,6 +34,18 @@ border-radius: 3px;
 border-color: #e7e7e7;
 border: none;
 margin: 10px 0px;
+}
+
+.btn-secondary{
+    color:#0D1321;
+    background-color: white;
+    font-size: 18px;
+padding: 10px 18px;
+border-radius: 3px;
+border-color: #000000;
+border: 1px 1px 1px 1px;
+margin: 10px 0px;
+    
 }
 
 .section-title {
@@ -132,14 +144,29 @@ main section{
 /* about styles */
 .about {
     border-radius: 10px;
-    padding: 130px 150px;
+    padding: 100px 100px;
     text-align: center;
 }
 
 .about-items {
+    margin: 80px 80px;
+    padding: 20px 20px;
     display: flex;
     justify-content: space-between;
+    text-align: left;
 
+}
+
+.about-items-second {
+    margin: 80px 80px;
+    padding: 20px 20px;
+    display: flex;
+    justify-content: space-between;
+    text-align: right;
+
+}
+.about-greetings{
+    font-size: 30px;
 }
 
 
