--- a/styles/styles.css
+++ b/styles/styles.css
@@ -305,3 +305,39 @@ form {
 }
 
 
+
+
+
+/* Working for the responsive */
+
+.hide{
+    display: none;
+
+}
+
+/* for the mobile device  */
+
+@media screen and (max-width: 576px) {
+    .skills-container {
+        flex-direction: column;
+    }
+
+
+    .about{
+        padding: 10px;
+    }
+
+    .about-items {
+        flex-direction: column-reverse;
+        margin: 5px;
+        padding: 5px;}
+
+    .about-items-second {
+        flex-direction: column;
+        margin: 5px;
+        padding: 5px;}
+
+
+    
+}
+
